syntax = "proto3";

package io.harness.pms.facilitators;

option java_multiple_files = true;

message FacilitatorObtainment {
  FacilitatorType type = 1;
  bytes parameters = 2;
}

message FacilitatorType {
  string type = 1;
}